[package]
name = "robot_simulator_rust"
version = "0.1.0"
authors = ["Nobuyuki Matsui <nobuyuki.matsui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
zmq = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.26"
