[package]
name = "robot_simulator_rust"
version = "0.1.0"
authors = ["Nobuyuki Matsui <nobuyuki.matsui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent_derive = { path = "./agent_derive" }
tokio = { version = "1", features = ["full"] }
zmq = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.26"
num = "0.4"
itertools = "0.10"
rand = "0.8"
rand_distr = "0.4"
